--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,21 +2,20 @@
 
 repos:
 
-# If a python3 installation is available than can run black
-# then run that. Otherwise skip.
--   repo: https://github.com/dials/black
-    rev: v2
-    hooks:
-    -   id: black
-        args: [--safe, --quiet]
-        language_version: libtbx.python
+# Automatic source code formatting
+- repo: https://github.com/psf/black
+  rev: stable
+  hooks:
+  - id: black
+    args: [--safe, --quiet]
 
-# Syntax check and some basic flake8,
--   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v2.0.0
-    hooks:
-    -   id: check-ast
-        language_version: libtbx.python
-    -   id: flake8
-        language_version: libtbx.python
-        args: ['--max-line-length=88', '--select=W291,W292,W293,F401']
+# Syntax check and some basic flake8
+- repo: https://github.com/pre-commit/pre-commit-hooks
+  rev: v2.0.0
+  hooks:
+  - id: check-ast
+  - id: flake8
+    args: ['--max-line-length=88', '--select=E401,E711,E712,E713,E714,E721,E722,E901,F401,F402,F403,F405,F631,F632,F633,F811,F812,F821,F822,F841,F901,W191,W291,W292,W293,W602,W603,W604,W605,W606']
+  - id: check-merge-conflict
+  - id: check-added-large-files
+    args: ['--maxkb=200']
