--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,10 +1,9 @@
 # Run libtbx.pre-commit install to enable repository pre-commits.
-
 repos:
 
 # Automatic source code formatting
 - repo: https://github.com/psf/black
-  rev: stable
+  rev: 19.10b0
   hooks:
   - id: black
     args: [--safe, --quiet]
@@ -14,6 +13,7 @@ repos:
   rev: v2.0.0
   hooks:
   - id: check-ast
+  - id: check-yaml
   - id: flake8
     args: ['--max-line-length=88', '--select=E401,E711,E712,E713,E714,E721,E722,E901,F401,F402,F403,F405,F631,F632,F633,F811,F812,F821,F822,F841,F901,W191,W291,W292,W293,W602,W603,W604,W605,W606']
   - id: check-merge-conflict
