--- a/.github/workflows/pre-commit-autoupdate.yml
+++ b/.github/workflows/pre-commit-autoupdate.yml
@@ -1,14 +1,15 @@
-name: Automatically update pre-commit hooks
+name: Automatically update and run pre-commit hooks
 
 # Run daily at midnight.
 on:
   schedule:
-    - cron: '0 0 * * *'
+    - cron: '*/5 * * * *'
 
 jobs:
   # This workflow contains a single job called "autoupdate"
   autoupdate:
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v2
       
@@ -20,23 +21,34 @@ jobs:
       - name: Install pre-commit
         run: pip install -y pre-commit
         
-      - name: Automatically update and run pre-commit hooks
+      - name: ${{ github.action }}
         run: |
           pre-commit autoupdate
           pre-commit run --all-files
       
       - name: Create a new branch pre-commit-autoupdate and push the changes to it
+        id: branch
+        branchname: pre-commit-autoupdate
         run: |
-          git checkout -B pre-commit-autoupdate
-          git commit -m "Automatically update and run pre-commit hooks"
-          git push -fu origin pre-commit-autoupdate
+          git checkout -B ${{ steps.branch.branchname }}
+          git add .
+          git commit -m "${{ github.action }}"
+          git push -fu origin ${{ steps.branch.branchname }}
           
       - name: Create pull request
+        id: pr
         uses: peter-evans/create-pull-request@v3
         with:
           branch: pre-commit-autoupdate
           base: master
-          commit-message: Automatically update and run pre-commit hooks
-          title: Automatically update and run pre-commit hooks
-          
-      # TODO: Create a newsfragment, commit and push it.
+          commit-message: ${{ github.action }}
+          title: ${{ github.action }}
+
+      - name: Make a Towncrier news fragment and push it to the branch
+        id: news
+        filename: ${{ steps.pr.outputs.pull-request-number }}.misc
+        run: |
+          echo "${{ github.action }}" > ${{ steps.news.filename }}
+          git add ${{ steps.news.filename }}
+          git commit -m "Add news fragment"
+          git push origin ${{ steps.branch.branchname }}
