Is this why pre-commit doesn't end up in the PATH?

--- a/.github/workflows/pre-commit-autoupdate.yml
+++ b/.github/workflows/pre-commit-autoupdate.yml
@@ -23,7 +23,7 @@ jobs:
           python-version: >3
 
       - name: Install pre-commit
-        run: pip install pre-commit
+        run: pip3 install pre-commit
 
       - name: ${{ github.action }}
         run: |
