--- a/.github/workflows/pre-commit-autoupdate.yml
+++ b/.github/workflows/pre-commit-autoupdate.yml
@@ -3,7 +3,7 @@ name: Automatically update and run pre-commit hooks
 # Run daily at midnight.
 on:
   schedule:
-    - cron: '*/5 * * * *'
+    - cron: '0 0 * * *'
 
 jobs:
   # This workflow contains a single job called "autoupdate"
