--- a/.github/workflows/pre-commit-autoupdate.yml
+++ b/.github/workflows/pre-commit-autoupdate.yml
@@ -35,6 +35,8 @@ jobs:
 
       - name: Create a new branch pre-commit-autoupdate and push the changes to it
         run: |
+          git config user.name "GitHub"
+          git config user.email "noreply@github.com"
           git checkout -B ${{ steps.branch.outputs.branchname }}
           git add .
           git commit -m "${{ github.workflow }}"
