--- a/.github/workflows/pre-commit-autoupdate.yml
+++ b/.github/workflows/pre-commit-autoupdate.yml
@@ -1,25 +1,28 @@
 name: Automatically update and run pre-commit hooks
 
-# Run daily at midnight.
 on:
+  # Run daily at midnight.
+  schedule:
+    - cron: '0 0 * * *'
+
+  # Also enable running manually.
   workflow_dispatch:
-  # schedule:
-  #   - cron: '*/5 * * * *'
 
 jobs:
-  # This workflow contains a single job called "autoupdate"
+  # This workflow contains a single job called "autoupdate".
   autoupdate:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - name: Check out the repository
+        uses: actions/checkout@2036a08e25fa78bbd946711a407b529a0a1204bf
 
       - name: Set the name of the branch for these changes
         id: branch
         run: echo "::set-output name=branchname::pre-commit-autoupdate"
 
       - name: Set up Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@24156c231c5e9d581bde27d0cdbb72715060ea51
         with:
           python-version: '>=3'
 
@@ -36,7 +39,7 @@ jobs:
 
       - name: Create pull request
         id: pr
-        uses: peter-evans/create-pull-request@v3
+        uses: peter-evans/create-pull-request@9bf4b302a561e1fe9120f6dc81cc39daed984a99
         with:
           branch: ${{ steps.branch.outputs.branchname }}
           commit-message: ${{ github.workflow }}
@@ -51,7 +54,7 @@ jobs:
       - name: Make a Towncrier news fragment and push it to the branch
         if: ${{ steps.pr.outputs.pull-request-number }}
         run: |
-          echo "${{ github.workflow }}" > ${{ steps.newsfile.outputs.filename }}
+          echo "${{ github.workflow }}." > ${{ steps.newsfile.outputs.filename }}
           git config user.name "GitHub"
           git config user.email "noreply@github.com"
           git checkout ${{ steps.branch.outputs.branchname }}
