Make pre-commit step output slightly clearer

--- a/.github/workflows/pre-commit-autoupdate.yml
+++ b/.github/workflows/pre-commit-autoupdate.yml
@@ -37,7 +37,7 @@ jobs:
           pre-commit autoupdate
           until pre-commit run --all-files
           do
-            echo "Re-running pre-commits..."
+            printf "\nRe-running pre-commits...\n"
           done
 
       - name: Create pull request
