--- a/.github/workflows/pre-commit-autoupdate.yml
+++ b/.github/workflows/pre-commit-autoupdate.yml
@@ -3,31 +3,25 @@ name: Automatically update and run pre-commit hooks
 on:
   # Run daily at midnight.
   schedule:
-    - cron: '0 0 * * *'
+    - cron: '17 0 * * 1'
 
   # Also enable running manually.
   workflow_dispatch:
 
 jobs:
-  # This workflow contains a single job called 'autoupdate'.
   autoupdate:
     runs-on: ubuntu-latest
 
     steps:
       - name: Check out the repository
-        # Don't use release tags for actions:  https://julienrenaux.fr/2019/12/20/github-actions-security-risk/
-        # Commit is equivalent to release tag v2.3.2.
-        uses: actions/checkout@2036a08e25fa78bbd946711a407b529a0a1204bf
+        uses: actions/checkout@v2
 
       - name: Set the name of the branch for these changes
         id: branch
         run: echo "::set-output name=branchname::pre-commit-autoupdate"
 
       - name: Set up Python
-        # Commit is equivalent to release tag v2.1.2.
-        uses: actions/setup-python@24156c231c5e9d581bde27d0cdbb72715060ea51
-        with:
-          python-version: '>=3'
+        uses: actions/setup-python@v2
 
       - name: Install pre-commit
         run: pip install pre-commit
@@ -37,18 +31,20 @@ jobs:
           pre-commit autoupdate
           until pre-commit run --all-files
           do
-            printf "\nRe-running pre-commits...\n"
+          echo -e "\e[1mRe-running pre-commits...\e[0m"
           done
 
       - name: Create pull request
         id: pr
+        # Don't use release tags for actions, except from the 'actions' organisation:
+        # https://julienrenaux.fr/2019/12/20/github-actions-security-risk/
         # Commit is equivalent to release tag v3.2.0.
         uses: peter-evans/create-pull-request@9bf4b302a561e1fe9120f6dc81cc39daed984a99
         with:
           branch: ${{ steps.branch.outputs.branchname }}
           commit-message: ${{ github.workflow }}
           title: ${{ github.workflow }}
-          body: Automated changes performed by a GitHub workflow.
+          body: Update pre-commit hooks and run them on the entire code base.
 
       - name: Set the file name for the Towncrier news fragment
         id: newsfile
@@ -60,9 +56,7 @@ jobs:
         # Only run if the PR exists.
         if: ${{ steps.newsfile.outputs.filename }}
         run: |
-          echo "${{ github.workflow }}." > ${{ steps.newsfile.outputs.filename }}
-          git config user.name "GitHub"
-          git config user.email "noreply@github.com"
+          echo "${{ github.workflow }}." > newsfragments/${{ steps.newsfile.outputs.filename }}
           git checkout ${{ steps.branch.outputs.branchname }}
           git add ${{ steps.newsfile.outputs.filename }}
           git commit -m "Add news fragment"
