--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,9 +4,7 @@ package_dir = ".."
 filename = "CHANGELOG.rst"
 
 [tool.isort]
-sections="FUTURE,STDLIB,THIRDPARTY,CCTBX,DXTBX,DIALS,XIA2,FIRSTPARTY,LOCALFOLDER"
+sections="FUTURE,STDLIB,THIRDPARTY,CCTBX,DIALS,FIRSTPARTY,LOCALFOLDER"
 known_cctbx="boost,boost_adaptbx,cbflib_adaptbx,cctbx,chiltbx,clipper_adaptbx,cma_es,cootbx,crys3d,cudatbx,fable,fast_linalg,fftw3tbx,gltbx,iota,iotbx,libtbx,mmtbx,omptbx,prime,rstbx,scitbx,simtbx,smtbx,spotfinder,tbxx,ucif,wxtbx,xfel"
-known_dxtbx="dxtbx"
-known_dials="dials"
-known_xia2="xia2"
+known_dials="dxtbx,dials,xia2"
 profile="black"
