--- a/.github/workflows/pre-commit-autoupdate.yml
+++ b/.github/workflows/pre-commit-autoupdate.yml
@@ -57,7 +57,8 @@ jobs:
         if: ${{ steps.newsfile.outputs.filename }}
         run: |
           echo "${{ github.workflow }}." > ${{ steps.newsfile.outputs.filename }}
-          git checkout ${{ steps.branch.outputs.branchname }}
+          git config user.name "GitHub"
+          git config user.email "noreply@github.com"
           git add ${{ steps.newsfile.outputs.filename }}
           git commit -m "Add news fragment"
           git push origin ${{ steps.branch.outputs.branchname }}
