--- a/.github/workflows/pre-commit-autoupdate.yml
+++ b/.github/workflows/pre-commit-autoupdate.yml
@@ -1,17 +1,20 @@
 name: Automatically update and run pre-commit hooks
 
-# Run daily at midnight.
 on:
+  # Run weekly at seventeen minutes past midnight (hopefully this plays nice with the infrastructure).
   schedule:
-    - cron: '0 0 * * *'
+    - cron: '17 0 * * 1'
+
+  # Also enable running manually.
+  workflow_dispatch:
 
 jobs:
-  # This workflow contains a single job called "autoupdate"
   autoupdate:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - name: Check out the repository
+        uses: actions/checkout@v2
 
       - name: Set the name of the branch for these changes
         id: branch
@@ -19,40 +22,49 @@ jobs:
 
       - name: Set up Python
         uses: actions/setup-python@v2
-        with:
-          python-version: >3
 
       - name: Install pre-commit
         run: pip install pre-commit
 
-      - name: ${{ github.action }}
+      - name: ${{ github.workflow }}
         run: |
-          pre-commit autoupdate
-          pre-commit run --all-files
-
-      - name: Create a new branch pre-commit-autoupdate and push the changes to it
-        run: |
-          git checkout -B ${{ steps.branch.branchname }}
-          git add .
-          git commit -m "${{ github.action }}"
-          git push -fu origin ${{ steps.branch.branchname }}
+          while :; do
+            pre-commit run --all-files && break || {
+              git diff --quiet && {
+                echo One or more pre-commit hooks failed but re-running will not result in changes.
+                exit 1
+              }
+            echo One or more pre-commit hooks failed and there are changes to the repository.
+            echo -e "\e[1mRe-running pre-commit hooks...\e[0m"
+            git add -A
+            }
+          done
 
       - name: Create pull request
         id: pr
-        uses: peter-evans/create-pull-request@v3
+        # Don't use release tags for actions, except from the 'actions' organisation:
+        # https://julienrenaux.fr/2019/12/20/github-actions-security-risk/
+        # Commit is equivalent to release tag v3.2.0.
+        uses: peter-evans/create-pull-request@9bf4b302a561e1fe9120f6dc81cc39daed984a99
         with:
-          branch: pre-commit-autoupdate
-          base: master
-          commit-message: ${{ github.action }}
-          title: ${{ github.action }}
+          branch: ${{ steps.branch.outputs.branchname }}
+          commit-message: ${{ github.workflow }}
+          title: ${{ github.workflow }}
+          body: Update pre-commit hooks and run them on the entire code base.
 
       - name: Set the file name for the Towncrier news fragment
         id: newsfile
-        run: echo "::set-output name=filename::${{ steps.pr.outputs.pull-request-number }}.misc"
+        # Only run if the PR exists.
+        if: ${{ steps.pr.outputs.pull-request-number }}
+        run: echo "::set-output name=filename::newsfragments/${{ steps.pr.outputs.pull-request-number }}.misc"
 
       - name: Make a Towncrier news fragment and push it to the branch
+        # Only run if the PR exists.
+        if: ${{ steps.newsfile.outputs.filename }}
         run: |
-          echo "${{ github.action }}" > ${{ steps.newsfile.filename }}
-          git add ${{ steps.newsfile.filename }}
+          echo "${{ github.workflow }}." > ${{ steps.newsfile.outputs.filename }}
+          git config user.name "GitHub"
+          git config user.email "noreply@github.com"
+          git add ${{ steps.newsfile.outputs.filename }}
           git commit -m "Add news fragment"
-          git push origin ${{ steps.branch.branchname }}
+          git push origin ${{ steps.branch.outputs.branchname }}
