Actually include the crucial update command
After all that work in #36...

--- a/.github/workflows/pre-commit-autoupdate.yml
+++ b/.github/workflows/pre-commit-autoupdate.yml
@@ -28,6 +28,7 @@ jobs:
 
       - name: ${{ github.workflow }}
         run: |
+          pre-commit autoupdate
           while :; do
             pre-commit run --all-files && break || {
               git diff --quiet && {
