--- a/.github/workflows/pre-commit-autoupdate.yml
+++ b/.github/workflows/pre-commit-autoupdate.yml
@@ -29,7 +29,7 @@ jobs:
       - name: ${{ github.workflow }}
         run: |
           pre-commit autoupdate
-          until pre-commit run --all-files
+          until pre-commit run --all-files; do
             git diff --quiet && {
               echo One or more pre-commit hooks failed but re-running will not result in changes.
               exit 1
