--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,6 +2,7 @@
 package = "screen19"
 package_dir = ".."
 filename = "CHANGELOG.rst"
+issue_format = "`#{issue} <https://github.com/xia2/screen19/issues/{issue}>`_"
 
 [tool.isort]
 sections="FUTURE,STDLIB,THIRDPARTY,CCTBX,DIALS,FIRSTPARTY,LOCALFOLDER"
