--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,12 @@
 # Run 'libtbx.precommit install' to enable repository pre-commits.
 repos:
 
+# Bring Python code up to date with pyupgrade
+- repo: https://github.com/asottile/pyupgrade
+  rev: v2.12.0
+  hooks:
+  - id: pyupgrade
+
 # Automatically sort imports with isort
 - repo: https://github.com/timothycrosley/isort.git
   rev: 5.7.0
