--- a/setup.cfg
+++ b/setup.cfg
@@ -15,14 +15,30 @@ replace = version="{new_version}",
 search = __version__ = "{current_version}"
 replace = __version__ = "{new_version}"
 
-[bdist_wheel]
-universal = 1
-
 [flake8]
 exclude = docs
 
 [aliases]
 test = pytest
+
+[metadata]
+classifiers =
+    Development Status :: 4 - Beta
+    License :: OSI Approved :: BSD License
+    Natural Language :: English
+    Programming Language :: Python :: 3
+    Programming Language :: Python :: 3.6
+    Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
+    Operating System :: OS Independent
+project-urls =
+    Download = https://github.com/xia2/screen19/releases
+    GitHub = https://github.com/xia2/screen19
+    Bug-Tracker = https://github.com/xia2/screen19/issues
+
+[options]
+python_requires = >=3.6
 
 [tool:pytest]
 collect_ignore = ['setup.py']
