--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,6 +6,7 @@ repos:
   rev: v2.12.0
   hooks:
   - id: pyupgrade
+    args: ["--py36-plus"]
 
 # Automatically sort imports with isort
 - repo: https://github.com/timothycrosley/isort.git
