--- a/setup.cfg
+++ b/setup.cfg
@@ -27,18 +27,17 @@ classifiers =
 	License :: OSI Approved :: BSD License
 	Natural Language :: English
 	Programming Language :: Python :: 3
-	Programming Language :: Python :: 3.6
-	Programming Language :: Python :: 3.7
 	Programming Language :: Python :: 3.8
 	Programming Language :: Python :: 3.9
+	Programming Language :: Python :: 3.10
 	Operating System :: OS Independent
-project-urls = 
+project_urls =
 	Download = https://github.com/xia2/screen19/releases
 	GitHub = https://github.com/xia2/screen19
 	Bug-Tracker = https://github.com/xia2/screen19/issues
 
 [options]
-python_requires = >=3.6
+python_requires = >=3.8
 
 [tool:pytest]
 collect_ignore = ['setup.py']
