--- a/setup.cfg
+++ b/setup.cfg
@@ -22,7 +22,13 @@ exclude = docs
 test = pytest
 
 [metadata]
-classifiers = 
+name = screen19
+author = Diamond Light Source
+author_email = data_analysis@diamond.ac.uk
+description = Screening program for small-molecule single-crystal X-ray diffraction data
+licence = BSD license
+licence_file = LICENSE
+classifiers =
 	Development Status :: 4 - Beta
 	License :: OSI Approved :: BSD License
 	Natural Language :: English
@@ -37,7 +43,28 @@ project_urls =
 	Bug-Tracker = https://github.com/xia2/screen19/issues
 
 [options]
+package_dir =
+   =src
+packages = find:
 python_requires = >=3.8
+include_package_data = True
+install_requires = python_version>="3.8"
+test_suite = tests
+tests_require = pytest
+
+[options.packages.find]
+where = src
+
+[options.entry_points]
+console_scripts =
+	screen19 = screen.screen:main
+	screen19.minimum_exposure = screen.minimum_exposure:main
+libtbx.dispatcher.script = screen19.minimum_exposure = screen19.minimum_exposure"
+libtbx.precommit = screen19 = screen19
 
 [tool:pytest]
 collect_ignore = ['setup.py']
+
+
+
+# long_description="\n\n".join([readme, changelog_header, changelog]),
