--- a/setup.cfg
+++ b/setup.cfg
@@ -26,6 +26,7 @@ name = screen19
 author = Diamond Light Source
 author_email = data_analysis@diamond.ac.uk
 description = Screening program for small-molecule single-crystal X-ray diffraction data
+long_description = file: README.rst
 licence = BSD license
 licence_file = LICENSE
 classifiers =
@@ -48,9 +49,10 @@ package_dir =
 packages = find:
 python_requires = >=3.8
 include_package_data = True
-install_requires = python_version>="3.8"
+install_requires = python_version>='3.8'
 test_suite = tests
 tests_require = pytest
+zip_safe = False
 
 [options.packages.find]
 where = src
@@ -59,12 +61,10 @@ where = src
 console_scripts =
 	screen19 = screen.screen:main
 	screen19.minimum_exposure = screen.minimum_exposure:main
-libtbx.dispatcher.script = screen19.minimum_exposure = screen19.minimum_exposure"
-libtbx.precommit = screen19 = screen19
+libtbx.dispatcher.script = 
+	screen19.minimum_exposure = screen19.minimum_exposure
+libtbx.precommit = 
+	screen19 = screen19
 
 [tool:pytest]
 collect_ignore = ['setup.py']
-
-
-
-# long_description="\n\n".join([readme, changelog_header, changelog]),
