Get correct versioning from setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -7,11 +7,11 @@ serialize =
 	{major}.{minor}.{patch}
 	{major}.{minor}
 
-[bumpversion:file:setup.py]
+[bumpversion:file:setup.cfg]
 search = version="{current_version}",
 replace = version="{new_version}",
 
-[bumpversion:file:screen19/__init__.py]
+[bumpversion:file:screen/__init__.py]
 search = __version__ = "{current_version}"
 replace = __version__ = "{new_version}"
 
@@ -23,6 +23,7 @@ test = pytest
 
 [metadata]
 name = screen19
+version = 0.213
 author = Diamond Light Source
 author_email = data_analysis@diamond.ac.uk
 description = Screening program for small-molecule single-crystal X-ray diffraction data
