--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ current_version = 0.213
 commit = True
 tag = True
 parse = (?P<major>\d+)\.(?P<minor>\d+)(\.(?P<patch>\d+))?
-serialize = 
+serialize =
 	{major}.{minor}.{patch}
 	{major}.{minor}
 
@@ -62,9 +62,9 @@ where = src
 console_scripts =
 	screen19 = screen.screen:main
 	screen19.minimum_exposure = screen.minimum_exposure:main
-libtbx.dispatcher.script = 
-	screen19.minimum_exposure = screen19.minimum_exposure
-libtbx.precommit = 
+libtbx.dispatcher.script =
+	screen19.minimum_exposure = screen.minimum_exposure
+libtbx.precommit =
 	screen19 = screen19
 
 [tool:pytest]
