--- a/setup.cfg
+++ b/setup.cfg
@@ -63,7 +63,8 @@ console_scripts =
 	screen19 = screen.screen:main
 	screen19.minimum_exposure = screen.minimum_exposure:main
 libtbx.dispatcher.script =
-	screen19.minimum_exposure = screen.minimum_exposure
+    screen19 = screen19
+	screen19.minimum_exposure = screen19.minimum_exposure
 libtbx.precommit =
 	screen19 = screen19
 
