--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,40 +1,17 @@
 ci:
   autoupdate_schedule: quarterly
 
-# Run 'libtbx.precommit install' to enable repository pre-commits.
 repos:
-
-# Bring Python code up to date with pyupgrade
-- repo: https://github.com/asottile/pyupgrade
-  rev: v3.19.1
+- repo: https://github.com/astral-sh/ruff-pre-commit
+  rev: v0.14.4
   hooks:
-  - id: pyupgrade
-    args: ["--py36-plus"]
-
-# Automatically sort imports with isort
-- repo: https://github.com/PyCQA/isort
-  rev: 5.13.2
-  hooks:
-  - id: isort
-    additional_dependencies: [toml]
-
-# Automatic source code formatting with Black
-- repo: https://github.com/psf/black
-  rev: 24.10.0
-  hooks:
-  - id: black
-    args: [--safe, --quiet]
-
-# Enforce style with Flake8
-- repo: https://github.com/PyCQA/flake8
-  rev: 7.1.1
-  hooks:
-  - id: flake8
-    args: ['--max-line-length=88', '--select=E401,E711,E712,E713,E714,E721,E722,E901,F401,F402,F403,F405,F631,F632,F633,F811,F812,F821,F822,F841,F901,W191,W291,W292,W293,W602,W603,W604,W605,W606']
+    - id: ruff-check
+      args: [--fix, --exit-non-zero-on-fix, --show-fixes]
+    - id: ruff-format
 
 # Syntax check with pre-commit out-of-the-box hooks
 - repo: https://github.com/pre-commit/pre-commit-hooks
-  rev: v5.0.0
+  rev: v6.0.0
   hooks:
   - id: check-ast
   - id: check-yaml
