--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,8 +4,58 @@ package_dir = ".."
 filename = "CHANGELOG.rst"
 issue_format = "`#{issue} <https://github.com/xia2/screen19/issues/{issue}>`_"
 
-[tool.isort]
-sections="FUTURE,STDLIB,THIRDPARTY,CCTBX,DIALS,FIRSTPARTY,LOCALFOLDER"
-known_cctbx="boost,boost_adaptbx,cbflib_adaptbx,cctbx,chiltbx,clipper_adaptbx,cma_es,cootbx,crys3d,cudatbx,fable,fast_linalg,fftw3tbx,gltbx,iota,iotbx,libtbx,mmtbx,omptbx,prime,rstbx,scitbx,simtbx,smtbx,spotfinder,tbxx,ucif,wxtbx,xfel"
-known_dials="dxtbx,dials,xia2"
-profile="black"
+[tool.ruff.lint]
+select = ["E", "F", "W", "C4", "I"]
+unfixable = ["F841"]
+# E501 line too long (handled by formatter)
+# E741 Ambiguous variable name (We have lots of meaningful I, L, l)
+ignore = ["E501", "E741"]
+
+[tool.ruff.lint.per-file-ignores]
+"installer/**.py" = ["I"]
+"**/__init__.py" = ["F401"]
+
+[tool.ruff.lint.isort]
+known-first-party = ["dxtbx_*", "dxtbx", "dials"]
+section-order = [
+    "future",
+    "standard-library",
+    "third-party",
+    "cctbx",
+    "first-party",
+    "local-folder",
+]
+
+[tool.ruff.lint.isort.sections]
+"cctbx" = [
+    "boost",
+    "boost_adaptbx",
+    "cbflib_adaptbx",
+    "cctbx",
+    "chiltbx",
+    "clipper_adaptbx",
+    "cma_es",
+    "cootbx",
+    "crys3d",
+    "cudatbx",
+    "fable",
+    "fast_linalg",
+    "fftw3tbx",
+    "gltbx",
+    "iota",
+    "iotbx",
+    "libtbx",
+    "mmtbx",
+    "omptbx",
+    "prime",
+    "rstbx",
+    "scitbx",
+    "serialtbx",
+    "simtbx",
+    "smtbx",
+    "spotfinder",
+    "tbxx",
+    "ucif",
+    "wxtbx",
+    "xfel",
+]
